feat: move seeds to data folder

--- a/2. lang-portal/Makefile
+++ b/2. lang-portal/Makefile
@@ -1,7 +1,7 @@
 .PHONY: install run dev test lint format seed
 
 install:
-	cd backend_python && uv pip sync
+	cd backend_python && uv sync
 
 run:
 	cd backend_python && PYTHONPATH=src uvicorn language_learning_api.main:app --reload --host 0.0.0.0 --port 8000
